--- a/.github/workflows/UpdateAndPush.yml
+++ b/.github/workflows/UpdateAndPush.yml
@@ -26,7 +26,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/Wake326/free.git"
+          source_repo: "https://github.com/freefq/free.git"
           source_branch: "master"
           destination_branch: "FreeVPN"
           github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
