--- a/.github/workflows/UpdateAndPush.yml
+++ b/.github/workflows/UpdateAndPush.yml
@@ -127,7 +127,7 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/yml2213/javascript.git"
-          source_branch: "main"
+          source_branch: "master"
           destination_branch: "WOOL_yml2213"
           github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
 
